--- a/frontend/starstreamFrontend/package.json
+++ b/frontend/starstreamFrontend/package.json
@@ -8,6 +8,8 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@asigloo/vue-dynamic-forms": "^3.18.1",
+    "@formkit/vue": "^1.0.0-beta.6",
     "vue": "^3.2.31",
     "vue-router": "^4.0.12"
   },
