Run django migrations on container start

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,6 +6,5 @@ RUN apt-get install default-libmysqlclient-dev
 COPY requirements.txt ./
 RUN pip3 install -r requirements.txt --no-cache-dir
 COPY . ./
-ENTRYPOINT ["python3"]
-CMD ["manage.py", "runserver", "0.0.0.0:8000"]
-#CMD sleep 10 && manage.py runserver 0.0.0.0:8000
+ENTRYPOINT []
+CMD python3 manage.py migrate && sh -c "exec python3 manage.py runserver 0.0.0.0:8000"
