--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,8 @@
 FROM node:16-alpine
-WORKDIR ./
-COPY . ./
+WORKDIR ./frontend
+COPY package*.json ./
 RUN npm install
-RUN npm install --verbose vite
-RUN npm install --verbose -g @vue/cli
-CMD ["npm", "run", "dev"]
+COPY . .
+#RUN npm install --verbose vite
+#RUN npm install --verbose -g @vue/cli
+CMD ["npm", "run", "dev", "--host"]
