Fix frontend-backend connection, add some to-do comments in frontend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
         condition: service_healthy
     volumes:
       - backend-uploads:/uploads/
-    expose:
-      - 8000
+    ports:
+      - 8000:8000
   db:
     image: mysql
     container_name: starstream-db
