--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "vue": "^3.2.31",
     "vue-axios": "^3.4.1",
     "vue-resource": "^1.5.3",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.0.12",
+    "mitt": "^3.0.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
