--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "vue-axios": "^3.4.1",
     "vue-resource": "^1.5.3",
     "vue-router": "^4.0.12",
-    "mitt": "^3.0.0"
+    "mitt": "^3.0.0",
+    "store.js": "^1.0.4"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
