Fix some minor bugs

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,7 +2,9 @@ FROM python:3.10-bullseye
 EXPOSE 8000
 RUN pip install --upgrade pip
 WORKDIR ./
+RUN apt-get update
 RUN apt-get install default-libmysqlclient-dev
+RUN apt-get install iputils-ping -y
 COPY requirements.txt ./
 RUN pip3 install -r requirements.txt --no-cache-dir
 COPY . ./
