--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,6 @@
-FROM node:16-alpine
+FROM node:16-bullseye
+RUN apt-get update
+RUN apt-get install iputils-ping -y
 WORKDIR ./frontend
 COPY package*.json ./
 RUN npm install
