--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,21 @@
 services:
   backend:
     build: backend
-    container_name: starstream-backend
+    container_name: starstream_backend
     depends_on:
       db:
         condition: service_healthy
     volumes:
       - backend-uploads:/uploads/
     ports:
-      - 8000:8000
-      # this should really be an expose: rather than ports: ...
-      # but for some reason inter-container communication doesn't work otherwise 
+      - "8000:8000"
+    networks:
+      default:
+        aliases:
+          - starstream_backend
   db:
     image: mysql
-    container_name: starstream-db
+    container_name: starstream_db
     command: '--default-authentication-plugin=mysql_native_password'
     restart: always
     healthcheck:
@@ -26,13 +28,13 @@ services:
     environment:
       - MYSQL_DATABASE=starstream_db
       - MYSQL_ROOT_PASSWORD=starstreampw
-    ports:
+    expose:
       - 3306
   frontend:
     build: frontend
-    container_name: starstream-frontend
+    container_name: starstream_frontend
     ports:
-      - 8080:8080
+      - "8080:8080"
 volumes:
   db-data:
   backend-uploads:
