--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,25 @@
 services:
+  frontend:
+    build: frontend
+    container_name: starstream_frontend
+    ports:
+      - "8080:8080"
+    depends_on:
+      - backend
   backend:
     build: backend
     container_name: starstream_backend
-    depends_on:
-      db:
-        condition: service_healthy
     volumes:
       - backend-uploads:/uploads/
     ports:
       - "8000:8000"
-    networks:
-      default:
-        aliases:
-          - starstream_backend
+    depends_on:
+      db:
+        condition: service_healthy
   db:
     image: mysql
     container_name: starstream_db
     command: '--default-authentication-plugin=mysql_native_password'
-    restart: always
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "127.0.0.1", "--silent"]
-      interval: 3s
-      retries: 5
-      start_period: 30s
     volumes:
       - db-data:/var/lib/mysql
     environment:
@@ -30,11 +27,12 @@ services:
       - MYSQL_ROOT_PASSWORD=starstreampw
     expose:
       - 3306
-  frontend:
-    build: frontend
-    container_name: starstream_frontend
-    ports:
-      - "8080:8080"
+    restart: always
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "127.0.0.1", "--silent"]
+      interval: 3s
+      retries: 5
+      start_period: 30s
 volumes:
   db-data:
   backend-uploads:
